Added close brackets and indent

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     <script src="js/libs/searchcursor.min.js"></script>
     <script src="js/libs/match-highlighter.min.js"></script>
     <script src="js/libs/jump-to-line.min.js"></script>
+    <script src="js/libs/closebrackets.min.js"></script>
 
     <script src="js/libs/modes/clike.min.js"></script>
     <script src="js/libs/modes/css.min.js"></script>
