--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/assets.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/show-hint.min.css" integrity="sha512-OmcLQEy8iGiD7PSm85s06dnR7G7C9C0VqahIPAj/KHk5RpOCmnC6R2ob1oK4/uwYhWa9BF1GC6tzxsC8TIx7Jg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/themes/dark.css" id="theme-link">
     <link rel="stylesheet" href="css/editor.css">
 </head>
@@ -51,6 +52,14 @@
     <script src="js/libs/match-highlighter.min.js"></script>
     <script src="js/libs/jump-to-line.min.js"></script>
     <script src="js/libs/closebrackets.min.js"></script>
+
+    <script src="js/libs/hints/show-hint.min.js"></script>
+    <script src="js/libs/hints/anyword-hint.min.js"></script>
+    <script src="js/libs/hints/css-hint.min.js"></script>
+    <script src="js/libs/hints/html-hint.min.js"></script>
+    <script src="js/libs/hints/javascript-hint.min.js"></script>
+    <script src="js/libs/hints/sql-hint.min.js"></script>
+    <script src="js/libs/hints/xml-hint.min.js"></script>
 
     <script src="js/libs/modes/clike.min.js"></script>
     <script src="js/libs/modes/css.min.js"></script>
