Added auto updates

--- a/public/editor.html
+++ b/public/editor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unbenannt.md</title>
+    <title>Unnamed</title>
 
     <link rel="stylesheet" href="css/assets.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
