Added colorScheme to settings

--- a/public/main.html
+++ b/public/main.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="css/assets.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/colorSchemes/dark.css" id="theme-link">
 </head>
 <body>
     <header>
@@ -42,5 +43,7 @@
             </button>
         </div>
     </main>
+
+    <script src="js/theme.js"></script>
 </body>
 </html>
