--- a/public/editor.html
+++ b/public/editor.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/assets.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/show-hint.min.css" integrity="sha512-OmcLQEy8iGiD7PSm85s06dnR7G7C9C0VqahIPAj/KHk5RpOCmnC6R2ob1oK4/uwYhWa9BF1GC6tzxsC8TIx7Jg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/themes/dark.css" id="theme-link">
+    <link rel="stylesheet" href="css/colorSchemes/dark.css" id="theme-link">
     <link rel="stylesheet" href="css/editor.css">
 </head>
 
