--- a/public/main.html
+++ b/public/main.html
@@ -9,7 +9,8 @@
 
     <link rel="stylesheet" href="css/assets.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/colorSchemes/dark.css" id="theme-link">
+    <link rel="stylesheet" href="css/themes/default.css" id="theme-link">
+    <link rel="stylesheet" href="css/colorSchemes/dark.css" id="colorscheme-link">
 </head>
 <body>
     <header>
