added minecraft server properties hightlighting

--- a/public/editor.html
+++ b/public/editor.html
@@ -91,6 +91,7 @@
     <script src="js/libs/modes/swift.min.js"></script>
     <script src="js/libs/modes/xml.min.js"></script>
     <script src="js/libs/modes/yaml.min.js"></script>
+    <script src="js/libs/modes/minecraftProperties.js"></script>
 
     <script src="js/editor.js"></script>
     <script src="js/files.js"></script>
