added toml syntax highlighting

--- a/public/editor.html
+++ b/public/editor.html
@@ -26,7 +26,7 @@
                 <button type="button" onclick="window.api.invoke('minimize')">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="var(--font-color)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6 12L18 12" stroke="var(--font-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
                 </button>
-                <button type="button" onclick="window.api.invoke('maximize')"">
+                <button type="button" onclick="window.api.invoke('maximize')">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="var(--font-color)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <rect x="4" y="4" width="16" height="16" rx="2" stroke="var(--font-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></rect> </g></svg>
                 </button>
                 <button type="button" class="danger" onclick="window.api.invoke('close')">
@@ -92,6 +92,7 @@
     <script src="js/libs/modes/xml.min.js"></script>
     <script src="js/libs/modes/yaml.min.js"></script>
     <script src="js/libs/modes/minecraftProperties.js"></script>
+    <script src="js/libs/modes/toml.js"></script>
 
     <script src="js/editor.js"></script>
     <script src="js/files.js"></script>
