added sql syntax highlighting

--- a/public/editor.html
+++ b/public/editor.html
@@ -93,6 +93,7 @@
     <script src="js/libs/modes/yaml.min.js"></script>
     <script src="js/libs/modes/minecraftProperties.js"></script>
     <script src="js/libs/modes/toml.js"></script>
+    <script src="js/libs/modes/sql.min.js"></script>
 
     <script src="js/editor.js"></script>
     <script src="js/files.js"></script>
